- Added In Control to allow customization of mobs
- Added Fx Control to allow customization of player effects
- Added FastSuite, FastWorkbench, and FastFurnace for performance
- Added MacCraft to help with MacOS compatibility
- Removed Medieval Music as it has been replaced by Music Triggers
- Removed Infinite Music as it is made obsolete by Music Triggers

-= Additions =-
- Added search category tags to JEI. See the guidebook for more.

-= Changes =-
- Changed the menu panorama
- Updated in game Guidebook
- Changed the anvil to be made from 7 cast iron ingots in an I pattern
- Changed phantoms to spawn in the end, and disabled insomnia, preventing phantoms from spawning fron not sleeping
- Changed the recipe of several food items: mushroom stew, beetroot soup, fruit salad
- Changed honey bread and honey glazed porkchop to use spout filling instead of crafting
- Changed mushroom stew and beetroot soup to count as meals, and thus their food value has been increased.

-= Removals =-
- Removed the Honeyed Apple from Buzzier Bees as it overlapped the one from Create
- Zombies will no longer spawn reinforcements when attacked
- Baby zombies will no longer spawn at all

-= Bugfixes =-
- Fixed an issue where JourneyMap Integrations was trying to integrate with FTBChunks when FTBChunks is not present
- Fixed an issue where grilled corn, boiled corn, and cornbread dressing were note craftable

---=== Version 0.2.0 ===---
IMPORTANT: Please remove any items you had in backpacks BEFORE updating as the previous backpack mod has been removed! There is a different solution for backpacks in this version.

-= Modlist Changes =-
- Added Quark Oddities. All features currently disabled except for the Backpack
- Added Curious Quark Oddities backpack
- Added Polymorph to fix problems with recipe overlap
- Added Controlling to be able to search keybinds
- Added Eclectic Trove for more variety with tooltips
- Added Embellished Stone for better Advancement Plaques