@@ -132,13 +132,13 @@
 		#Increases the time required for Baby Animals to grow (e.g. at 2.0 Animals will take twice to grow).
 		#1.0 will make Animals grow like normal.
 		#Range: 1.0 ~ 128.0
-		"Childs Growth Multiplier" = 3.0
+		"Childs Growth Multiplier" = 1.0
 		#If true, 'Childs Growth Multiplier' will be applied to villagers too.
 		"Childs Growth Villagers" = true
 		#Increases the time required for Animals to breed again (e.g. at 2.0 Animals will take twice to be able to breed again).
 		#1.0 will make Animals breed like normal.
 		#Range: 1.0 ~ 128.0
-		"Breeding Time Multiplier" = 3.5
+		"Breeding Time Multiplier" = 1.0
 		#Increases the time required for Chickens to lay an egg (e.g. at 2.0 Chickens will take twice the time to lay an egg).
 		#1.0 will make chickens lay eggs like normal.
 		#Range: 1.0 ~ 128.0
@@ -146,7 +146,7 @@
 		#Seconds before a cow can be milked again. This applies to Mooshroom stew too.
 		#0 will disable this feature.
 		#Range: > 0
-		"Cow Milk Delay" = 1200
+		"Cow Milk Delay" = 60
 
 	#Bonemeal is no longer so OP
 	[Farming."Nerfed Bonemeal"]
